<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="605dp"
        android:background="@color/colorAccent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="140dp"
                android:layout_height="130dp"
                android:id="@+id/img_logo"
                android:src="@drawable/my_logo"
                android:layout_marginTop="30dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/se_conencter"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/msg_connection"
                android:layout_marginTop="10dp"
                android:textSize="17dp" />

       <LinearLayout
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:orientation="vertical"
           android:layout_marginTop="30dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_email_login"
                android:inputType="textEmailAddress"
                android:hint="EMAIL"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:background="@drawable/ic_edittextstyle"
                android:drawablePadding="20dp"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_password_login"
                android:hint="MOT DE PASSE"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="20dp"
                android:background="@drawable/ic_edittextstyle" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_newseller"
                android:text="@string/msg_under_password"
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:thumbTint="@color/blue"
                   />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_info"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textColor="@color/black"
                />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_seconnecter"
            android:text="@string/se_conencter"
            android:textColor="@color/white"
            android:background="@drawable/btn_gradient_style" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_forget_password"
                    android:text="@string/msg_forget_password"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textSize="15dp"
                    android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_newAccount"
                android:text="@string/msg_new_Account"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/my_logo"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>