<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Créer Compte"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        />



    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_firstname"
            android:hint="NOM"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:background="@drawable/ic_edittextstyle"
            android:drawablePadding="20dp"
            android:textCursorDrawable="@drawable/color_cursor"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_lastname"
            android:hint="PRENOM"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:background="@drawable/ic_edittextstyle"
            android:drawablePadding="20dp"
            android:layout_marginTop="10dp"
            android:textCursorDrawable="@drawable/color_cursor"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_mail"
            android:background="@drawable/ic_edittextstyle"
            android:drawablePadding="20dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_marginTop="10dp"/>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_password_register"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:background="@drawable/ic_edittextstyle"
            android:drawablePadding="20dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_confirm_password"
            android:hint="@string/confirm_password"
            android:drawableLeft="@drawable/ic_password"
            android:background="@drawable/ic_edittextstyle"
            android:inputType="textPassword"
            android:drawablePadding="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_password_info"
            android:layout_marginTop="8dp"
            android:textSize="11dp"
            android:layout_marginLeft="10dp"/>


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_to_adrs"
            android:text="Conitinue"
            android:textColor="@color/white"
            android:background="@drawable/btn_gradient_style" />



        </LinearLayout>

    </LinearLayout>



</LinearLayout>